--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-bootstrap": "^1.4.3",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
+    "react-scroll": "^1.8.1",
     "typeface-anton": "^1.1.13",
     "typeface-ibm-plex-sans": "^1.1.13",
     "web-vitals": "^0.2.4"
