--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.2",
     "bootstrap": "^4.6.0",
+    "node-sass": "^4.14.1",
+    "photoswipe": "^4.1.3",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.3",
     "react-dom": "^17.0.1",
+    "react-photoswipe-gallery": "^1.3.4",
     "react-scripts": "4.0.1",
     "react-scroll": "^1.8.1",
     "typeface-anton": "^1.1.13",
@@ -41,5 +44,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "devDependencies": {}
 }
