--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-bootstrap": "^1.4.3",
     "react-dom": "^17.0.1",
     "react-photoswipe-gallery": "^1.3.4",
+    "react-reveal": "^1.2.2",
     "react-scripts": "4.0.1",
     "react-scroll": "^1.8.1",
     "typeface-anton": "^1.1.13",
