--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 /node_modules
 /.pnp
 .pnp.js
+/functions
 
 # testing
 /coverage
@@ -17,7 +18,12 @@
 .env.development.local
 .env.test.local
 .env.production.local
+.firebase
+.firebaserc
+.eslintcache
+firebase.json
 
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+.eslintcache
