--- a/package.json
+++ b/package.json
@@ -8,8 +8,12 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.2",
+    "body-parser": "^1.19.0",
     "bootstrap": "^4.6.0",
+    "express": "^4.17.1",
+    "morgan": "^1.10.0",
     "node-sass": "^4.14.1",
+    "nodemon": "^2.0.7",
     "photoswipe": "^4.1.3",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.3",
