--- a/package.json
+++ b/package.json
@@ -1,54 +1,34 @@
 {
-  "name": "business_template_1",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@material-ui/core": "^4.11.2",
-    "@material-ui/icons": "^4.11.2",
-    "@testing-library/jest-dom": "^5.11.9",
-    "@testing-library/react": "^11.2.3",
-    "@testing-library/user-event": "^12.6.2",
-    "body-parser": "^1.19.0",
-    "bootstrap": "^4.6.0",
-    "express": "^4.17.1",
-    "morgan": "^1.10.0",
-    "node-sass": "^4.14.1",
-    "nodemon": "^2.0.7",
-    "photoswipe": "^4.1.3",
-    "react": "^17.0.1",
-    "react-bootstrap": "^1.4.3",
-    "react-dom": "^17.0.1",
-    "react-photoswipe-gallery": "^1.3.4",
-    "react-reveal": "^1.2.2",
-    "react-scripts": "4.0.1",
-    "react-scroll": "^1.8.1",
-    "typeface-anton": "^1.1.13",
-    "typeface-ibm-plex-sans": "^1.1.13",
-    "web-vitals": "^0.2.4"
-  },
+  "name": "groceries",
+  "version": "1.0.0",
+  "description": "List keeper with a log in authentication system",
+  "main": "app.js",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js",
+    "heroku-postbuild": "cd client && npm install && npm run build"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/noelloera/groceries.git"
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  "author": "Noel Loera",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/noelloera/groceries/issues"
   },
-  "devDependencies": {}
+  "homepage": "https://github.com/noelloera/groceries#readme",
+  "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
+    "dotenv": "^8.2.0",
+    "email-validator": "^2.0.4",
+    "express": "^4.17.1",
+    "express-validator": "^6.9.2",
+    "mongoose": "^5.13.2",
+    "morgan": "^1.10.0",
+    "nodemon": "^2.0.10",
+    "password-validator": "^5.1.1",
+    "path": "^0.12.7"
+  }
 }
