--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/noelloera/groceries.git"
+    "url": "git+https://github.com/noelloera/business_template_1.git"
   },
   "author": "Noel Loera",
   "license": "ISC",
